compétences et services

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Portfolio KHADIM NIASS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,7 +55,7 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experiences</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Skills</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -63,7 +63,6 @@
     </div>
   </header>
   <!-- End Header -->
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
@@ -338,21 +337,13 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>KHADIM NIASS</h4>
-              <ul>
-                <li>(221) 77 195 87 13</li>
-                <li>khadim1.niass@ucad.edu.sn</li>
-                <li>niassssn@gmail.com</li>
-              </ul>
-            </div>
+           
 
             <h3 class="resume-title">Diplomes</h3>
             <div class="resume-item">
               <h4>Certification en développement web &amp; mobile</h4>
               <h5>2021 - 2022</h5>
-              <p><em>SONATEL ACADEMY</em></p>
+              <p><em>SONATEL ACADEMY</em> <a href="https://orangedigitalcenter.sn/">ecole</a></p>
                 <p>
                   Une formation de solidification des compétences 10 à 11 mois durant je concentre exclusivement sur l'apprentissage
                   du développement web &amp; mobile. La Certification m'a permis d'apprendre et approfondir 
@@ -362,7 +353,7 @@
             <div class="resume-item">
                 <h4>Licence en Mathématiques et informatiques appliquées</h4>
                 <h5>2017 - 2020</h5>
-                <p><em> <b>TDSI</b> Transmission des Données et Sécurité de l'information</em></p>
+                <p><em> <b>TDSI</b> Transmission des Données et Sécurité de l'information </em><a href="https://lacgaatdsi.blogspot.com/">ecole</a></p>
                 <p>
                   une formation que j'ai demarré dès que j'ai obtenu Mon BAC
                   c'est une formation qui m'a permis de découvrir, l'informatiques en sa globalité 
@@ -379,24 +370,37 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h5>Août 2022 - present</h5>
-              <h4>développeur fullstack chez</h4>
-              <p><em>chez <b>(ofms)</b> Orange Finances Mobiles Senegal</em></p>
+              <h4>développeur fullstack</h4>
+              <p> 
+                <a href="https://www.orange.sn/orange-money">
+                  <em>
+                    chez <b>(ofms)</b> Orange Finances Mobiles Senegal
+                  </em>
+                </a>  
+              </p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>mise en place d'une solution RPA, pour essayer de remplacer un travail qui se faisait de manières répétitives de manières manuelle</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h5>2021 - 2022</h5>
+              <h4>developeur fullstack</h4>
+              <p>
+                <a href="orangedigitalcenter.sn">
+                <em>
+                    orange digital center
+                </em>
+              </a>
+              </p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>
+                  brasil burger : un projet riche en fonctionnalité et en code
+                  <ul>
+                    <li>symfon</li>
+                    <li>ANGULAR</li>
+                    <li>ionic</li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </div>
@@ -404,6 +408,13 @@
 
       </div>
     </section><!-- End Resume Section -->
+    <div name="" id="">
+      <p><a href="https://openclassrooms.com/fr/dashboard">Mes formation openclassroom</a></p>
+      <img src="assets/img/openclassroom.png" alt="accuil openclassroom" class="img-fluid">
+
+      <p><a href="https://github.com/khadimniass/">Mes depot github</a></p>
+      <img src="assets/img/accuil_git.png" alt="accuil github" class="img-fluid">
+    </div>
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -411,52 +422,36 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <div class="icon"><i class="bi bi-code"></i></div>
+            <h4 class="title"><a href="">Apps</a></h4>
+            <p class="description">
+              creer un site web ou une applivation du début jusqu'à la fin ?
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <div class="icon"><i class="bi bi-server"></i></div>
+            <h4 class="title"><a href="">Base de Données</a></h4>
+            <p class="description">Vous cherchez un admin BD pour maintenir vos base de données ?</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <div class="icon"><i class="bi bi-tools"></i></div>
+            <h4 class="title"><a href="">maintenances</a></h4>
+            <p class="description">Vous avez une application qui existe déjà et que vous voulez amélioré ou ajouter des fonctionnalités</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-        </div>
-
+        
       </div>
     </section><!-- End Services Section -->
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            vous pouvez me contacter directement via ce formulaire de contact 👍
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -466,7 +461,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Dakar, G</p>
+                <p>Dakar, Gueul tapé Rue 67, angle x</p>
               </div>
               <div class="email">
                 <i class="bi bi-envelope"></i>
