gestion d'envoie email, mise a jour des skils

--- a/index.html
+++ b/index.html
@@ -394,11 +394,12 @@
               </p>
               <ul>
                 <li>
-                  brasil burger : un projet riche en fonctionnalité et en code
+                  brasil burger : un projet riche en fonctionnalité et en code dans lequel je devais implémenter une application de gestion de restaurant ainsi que l'administration.
+                  Une 
                   <ul>
-                    <li>symfon</li>
-                    <li>ANGULAR</li>
-                    <li>ionic</li>
+                    <li><b>SYMFONY : </b>pour gerer API</li>
+                    <li><b>ANGULAR : </b>pour gerer le front coté web</li>
+                    <li><b>IONIC : </b>pour gerer l'application mobile</li>
                   </ul>
                 </li>
               </ul>
@@ -480,21 +481,28 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form"> -->
-              <form method="post" role="form" class="php-email-form">
+              <form action="https://formsubmit.co/niassssn@gmail.com" target="_blank" method="POST" role="form" class="php-email-form">
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_captcha" value="false">
+                <!-- <input type="hidden" name="_next" value="https://khadimniass.me/thank.html"> -->
+                <input type="hidden" name="_next" value="127.1.1.0:5500/thank.html">
               <div class="row">
                 <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
+                  <label for="name">Prenom et nom</label>
                   <input type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                  <input type="email" class="form-control" name="email" id="email" required placeholder="KHADIM NIASS">
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
+                <label for="name">Objet de votre mail</label>
+                <input type="text" class="form-control" name="_subject" id="subject" required>
+              </div>
+              <div class="form-group">
+                <label for="name">téléphone</label>
+                <input type="tel" placeholder="77 195 87 13" class="form-control" name="phone" id="subject">
               </div>
               <div class="form-group">
                 <label for="name">Message</label>
