page de redirection des messages

--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
               <form action="https://formsubmit.co/niassssn@gmail.com" target="_blank" method="POST" role="form" class="php-email-form">
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
-                <!-- <input type="hidden" name="_next" value="https://khadimniass.me/thank.html"> -->
-                <input type="hidden" name="_next" value="127.1.1.0:5500/thank.html">
+                <input type="hidden" name="_next" value="https://khadimniass.me/thank.html">
+                <!-- <input type="hidden" name="_next" value="127.1.1.0:5500/thank.html"> -->
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Prenom et nom</label>
