ajouter quelques compétences

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
           <a href="https://github.com/khadimniass?tab=repositories" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
-
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
@@ -336,9 +335,53 @@
         </div>
 
         <div class="row">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h5>Août 2022 - present</h5>
+              <h4>développeur fullstack</h4>
+              <p> 
+                <a href="https://www.orange.sn/orange-money">
+                  <em>
+                    chez <b>(ofms)</b> Orange Finances Mobiles Senegal
+                  </em>
+                </a>  
+              </p>
+              <ul>
+                <li>refonte d'une application qui existait déjà mais lente car elle traite beaucoup de données à la fois. <i>j'ai utilisé les technologies suivantes :</i> </li>
+                <ul>
+                  <li>laravel</li>
+                  <li>angular</li>
+                </ul>
+                <li>apporter quelques modifications sur une application déjà existée avec une technologies un peu vieille</li>
+                <li>mise en place d'une solution RPA, pour essayer de remplacer un travail qui se faisait de manières répétitives de manières manuelle</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h5>2021 - 2022</h5>
+              <h4>developeur fullstack</h4>
+              <p>
+                <a href="https://orangedigitalcenter.sn/">
+                <em>
+                    orange digital center
+                </em>
+              </a>
+              </p>
+              <ul>
+                <li>
+                  brasil burger : un projet riche en fonctionnalité et en code dans lequel je devais implémenter une application de gestion de restaurant ainsi que l'administration.
+                  Une 
+                  <ul>
+                    <li><b>SYMFONY : </b>pour gerer API la partie back-end</li>
+                    <li><b>ANGULAR : </b>pour gerer la partie front-end coté web</li>
+                    <li><b>IONIC : </b>pour gerer l'application mobile</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+          
           <div class="col-lg-6" data-aos="fade-up">
-           
-
             <h3 class="resume-title">Diplomes</h3>
             <div class="resume-item">
               <h4>Certification en développement web &amp; mobile</h4>
@@ -364,45 +407,6 @@
                 <h4>Baccalauréat en series S1</h4>
                 <h5>2014 - 2017</h5>
                 <p><em>Lycée de Mbacké</em> <a href="#">ecole</a></p>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h5>Août 2022 - present</h5>
-              <h4>développeur fullstack</h4>
-              <p> 
-                <a href="https://www.orange.sn/orange-money">
-                  <em>
-                    chez <b>(ofms)</b> Orange Finances Mobiles Senegal
-                  </em>
-                </a>  
-              </p>
-              <ul>
-                <li>mise en place d'une solution RPA, pour essayer de remplacer un travail qui se faisait de manières répétitives de manières manuelle</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h5>2021 - 2022</h5>
-              <h4>developeur fullstack</h4>
-              <p>
-                <a href="orangedigitalcenter.sn">
-                <em>
-                    orange digital center
-                </em>
-              </a>
-              </p>
-              <ul>
-                <li>
-                  brasil burger : un projet riche en fonctionnalité et en code dans lequel je devais implémenter une application de gestion de restaurant ainsi que l'administration.
-                  Une 
-                  <ul>
-                    <li><b>SYMFONY : </b>pour gerer API</li>
-                    <li><b>ANGULAR : </b>pour gerer le front coté web</li>
-                    <li><b>IONIC : </b>pour gerer l'application mobile</li>
-                  </ul>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
@@ -493,7 +497,7 @@
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required placeholder="KHADIM NIASS">
+                  <input type="email" class="form-control" name="email" id="email" required placeholder="niassssn@gmail.com">
                 </div>
               </div>
               <div class="form-group">
