apporter quelques modifs

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
               <ul>
                 <li>refonte d'une application qui existait déjà mais lente car elle traite beaucoup de données à la fois. <i>j'ai utilisé les technologies suivantes :</i> </li>
                 <ul>
-                  <li>laravel</li>
-                  <li>angular</li>
+                  <li><b>LARAVEL</b></li>
+                  <li><b>ANGULAR</b></li>
                 </ul>
                 <li>apporter quelques modifications sur une application déjà existée avec une technologies un peu vieille</li>
                 <li>mise en place d'une solution RPA, pour essayer de remplacer un travail qui se faisait de manières répétitives de manières manuelle</li>
