ajouter la localisation

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Dakar, Gueul tapé Rue 67, angle x</p>
+                <p>Dakar, Gueul tapé Rue 61, angle 52</p>
               </div>
               <div class="email">
                 <i class="bi bi-envelope"></i>
@@ -480,7 +480,7 @@
                 <p>+221 77 195 8713</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.5548095364607!2d-17.462015486315345!3d14.681188089751176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xec17261a3a364e7%3A0x14a34b058a8b2d9a!2sRue%2061%2C%20Dakar!5e0!3m2!1sfr!2ssn!4v1665004840104!5m2!1sfr!2ssn" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
+              <iframe src="https://maps.google.com/maps?q=Gueule%20Tap%C3%A9e,%20rue%2061&t=&z=13&ie=UTF8&iwloc=&output=embed" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
 
           </div>
 
